--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <p class=destacado>
     Por arriba
     </P>
-  <img src="https://giphy.com/gifs/cfuL5gqFDreXxkWQ4o/html5" 
+  <img src="https://media.giphy.com/media/kyLYXonQYYfwYDIeZl/giphy.gif"
+>
+  
+  
        
   <h1>
     Hola Clau
